--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,11 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.0-1.20.1-fabric
 maven_group=com.gaura.energizer
 archives_base_name=energizer
 
 # Dependencies
 fabric_version=0.92.1+1.20.1
+cloth_config_version=11.1.118
+mod_menu_version=7.2.2
