--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,34 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+# Important Notes:
+# fabric.mod.json's modid field cannot be expanded, you must change it manually.
+# Every field you add must be added to the root build.gradle expandProps map.
 
-# Fabric Properties
+# Project
+version=1.0.0
+group=com.example.examplemod
+
+# Common
+# https://parchmentmc.org/docs/getting-started.html
+minecraft_version=1.20.1
+parch_mapping=2023.09.03
+
+# Forge
+forge_version=47.1.3
+forge_loader_version_range=[46,)
+forge_version_range=[46,)
+minecraft_version_range=[1.20, 1.21)
+
+# Fabric
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
-loader_version=0.15.11
+fabric_version=0.91.0+1.20.1
+fabric_loader_version=0.15.0
 
-# Mod Properties
-mod_version=1.3.1
-maven_group=com.gaura.energizer
-archives_base_name=energizer
+# Mod options
+mod_name=ExampleMod
+mod_author=Jared
+mod_id=examplemod
+license=C0-1.0
+description=The description of your mod. \nAccepts multilines.
 
-# Dependencies
-fabric_version=0.83.0+1.20
-cloth_config_version=11.1.118
-mod_menu_version=7.0.1
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
