improve rendering and abstract to common

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.client.gui.Gui$HeartType
 public net.minecraft.client.gui.Gui$HeartType m_168732_(Lnet/minecraft/world/entity/player/Player;)Lnet/minecraft/client/gui/Gui$HeartType; # forPlayer
+public net.minecraft.client.gui.Gui m_280593_(Lnet/minecraft/client/gui/GuiGraphics;Lnet/minecraft/client/gui/Gui$HeartType;IIIZZ)V # renderHeart
